# InfiniTime

./: .gitmodules  README.md  shell.nix
.devcontainer/: build.sh
.github/workflows/: main.yml
docker/: infinisim-cmake.patch  infinisim-main.patch  infinisim-terminal.patch
src/: CMakeLists.txt
src/components/settings/: Settings.h
src/displayapp/: Apps.h  DisplayApp.cpp  UserApps.h  WatchFaces.h
src/displayapp/apps/: Apps.h.in  CMakeLists.txt
src/displayapp/fonts/: CMakeLists.txt  fonts.json
src/displayapp/screens/: ApplicationList.h  Clock.cpp  Clock.h  WatchFaceAnalog.cpp  WatchFaceAnalog.h  WatchFaceDigital.cpp  WatchFaceDigital.h  WatchFaceFuzzy.cpp  WatchFaceFuzzy.h
src/displayapp/screens/settings/: SettingLocation.cpp  SettingLocation.h  SettingSetTime.cpp  SettingTimeFormat.cpp  SettingWatchFace.h  Settings.h
src/displayapp/widgets/: Counter.cpp  Counter.h
src/libs/: lv_conf.h
src/resources/: CMakeLists.txt  fonts.json  images.json
